--- a/dingtalk/pom.xml
+++ b/dingtalk/pom.xml
@@ -31,6 +31,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.wade</groupId>
 			<artifactId>dingtalk-sdk</artifactId>
 			<version>1.0.0</version>
